fix: fix function clickKeyKeyboard (change behavior Shift, Alt, Ctrl)

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 .main {
   margin: 0 auto;
   padding: 20px;
+  max-width: 1200px;
 }
 
 .text {
